test/cases/compile_errors/assign_through_constant_slice.zig
export fn f() void {
    var cstr: []const u8 = "Hat";
    cstr[0] = 'W';
}

// error
//
// :3:9: error: cannot assign to constant
